# cmake_trivial

./: CMakeLists.txt  README.md  bar.cc  bar.h  debug.sh  foo.cc  foo.h  main.cc  release.sh
